--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -25,5 +25,52 @@ header{
 
 header h1{
     text-transform: uppercase;
-    letter-spacing: 10px;
+    letter-spacing: 30px;
+    font-weight: bold;
+    color: #000;
+}
+
+/* Hover effect on main title */
+header h1:hover {
+    color: #ffffff98;
+    text-transform: uppercase;
+    letter-spacing: 40px;
+
+}
+
+#video-background {
+    position: fixed !important; /* Fullscreen fixed video */
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -1;
+    transform: translate(-50%, -50%);
+    object-fit: cover;
+    opacity: 0.7;
+}
+
+/* Logo container layout */
+.logo-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 0;
+}
+
+/* Logo image size */
+#logo {
+    width: 270px;
+    height: auto;
+}
+
+h2 {
+    margin-top: 20px;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    text-align: center;
+    font-size: 1.5rem;
+    margin-bottom: 20px;
 }
