--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -1,4 +1,7 @@
-/*Reset*/
+/*Reset
+b. Adaptar el diseño a tres tamaños de pantalla: escritorio (1024px+), tablet (768px) y
+móvil (480px).
+*/
 
 html{
     scroll-behavior: unset;
@@ -17,10 +20,10 @@ body, html{
 }
 
 
-header{
-    padding: 5% 0;
-    position: relative;
-    text-align: center;   
+header{ 
+    padding: 5% 0; 
+    position: relative; 
+    text-align: center;
 }
 
 header h1{
@@ -38,6 +41,24 @@ header h1:hover {
 
 }
 
+main { 
+    display: grid; 
+    grid-template-columns: 1fr; 
+    gap: 2rem; padding: 2%; } 
+
+.About-section, .Skills { 
+    display: grid; 
+    grid-template-columns: 1fr; 
+    align-items: center; 
+    justify-items: center; 
+    padding: 20px; 
+    background-color: rgba(255, 255, 255, 0.274); 
+
+}
+
+
+    
+       
 #video-background {
     position: fixed !important; /* Fullscreen fixed video */
     top: 50%;
@@ -52,13 +73,13 @@ header h1:hover {
     opacity: 0.7;
 }
 
-/* Logo container layout */
-.logo-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px 0;
-}
+
+/* Logo container layout */ 
+.logo-container { 
+    display: flex; 
+    justify-content: center; 
+    align-items: center; 
+    padding: 20px 0; }
 
 /* Logo image size */
 #logo {
